--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>grd2stream Documentation</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="darkmode.css">
+    <meta name="color-scheme" content="light dark">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
@@ -799,11 +801,12 @@
                     </ul>
                 </div>
                 <div class="footer-column">
-                    <h3>Resources</h3>
+                    <h3>Resources & Support</h3>
                     <ul>
-                        <li><a href="https://qgis.org/" target="_blank">QGIS Official Website</a></li>
-                        <li><a href="https://www.generic-mapping-tools.org/" target="_blank">GMT Website</a></li>
+                        <li><a href="https://plugins.qgis.org/plugins/grd2stream/#plugin-details" target="_blank">QGIS Plugin Website</a></li>
                         <li><a href="https://github.com/ScienceFlightPlanner" target="_blank">GitHub Repository</a></li>
+                        <li><a href="https://github.com/ScienceFlightPlanner/grd2stream/issues" target="_blank">Issue Tracker</a></li>
+                        <li><a href="https://github.com/tkleiner/grd2stream" target="_blank">Original CLI tool</a></li>
                     </ul>
                 </div>
             </div>
@@ -812,6 +815,37 @@
             </div>
         </div>
     </footer>
+
+    <style>
+      .sr-only {
+        position: absolute;
+        width: 1px;
+        height: 1px;
+        padding: 0;
+        margin: -1px;
+        overflow: hidden;
+        clip: rect(0, 0, 0, 0);
+        white-space: nowrap;
+        border: 0;
+      }
+
+      /* Additional accessibility improvements */
+      a:focus, button:focus, .theme-toggle:focus,
+      .cta-button:focus, .toc-card:focus, .back-to-top:focus {
+        outline: 3px solid var(--accent-color);
+        outline-offset: 2px;
+      }
+
+      @media (prefers-reduced-motion) {
+        * {
+          animation-duration: 0.001ms !important;
+          animation-iteration-count: 1 !important;
+          transition-duration: 0.001ms !important;
+        }
+      }
+    </style>
+
+    <script src="darkmode.js"></script>
 
     <!-- JavaScript for interactive elements -->
     <script>
