manual bg color (in darkmode)

--- a/resources/manual.html
+++ b/resources/manual.html
@@ -12,6 +12,7 @@
             margin: 0 auto;
             padding: 20px;
             color: #333;
+            background-color: #F5FFFA;
         }
         h1 {
             color: #2D3E50;
