--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
                 <p class="format-columns">x y dist v_x v_y</p>
                 <ul>
                     <li>All default columns</li>
-                    <li>X and Y components at each point</li>
+                    <li>X and Y vector components at each point</li>
                 </ul>
             </div>
             <div class="output-format-card">
